gcc/testsuite/g++.dg/parse/typedef5.C
namespace A
{
  typedef int T;
}

class A::T x; // { dg-error "" }
